// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section > renders default as expected 1`] = `
<div>
  <section
    class="section section-body"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative"
        >
          This is the title
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    />
  </section>
</div>
`;

exports[`Section > renders with all optional props 1`] = `
<div>
  <section
    class="section section-body"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative"
        >
          This is the title
        </h2>
        <p
          class="section-heading__subtitle text-bluedot-darker text-md"
        >
          This is the subtitle
        </p>
      </div>
      <div
        class="right-node"
      >
        This is the rightNode
      </div>
    </div>
    <div
      class="section__body"
    >
      <p>
        This is the yield
      </p>
    </div>
  </section>
</div>
`;
